[gd_scene load_steps=5 format=3 uid="uid://cxe7aglabkpej"]

[ext_resource type="Script" path="res://scripts/UI/pause_menu.gd" id="1_54lro"]
[ext_resource type="Theme" uid="uid://bwqig88kcvpte" path="res://assets/GUI/gui_default_theme.tres" id="1_y00tv"]
[ext_resource type="Texture2D" uid="uid://b5t86x0g7yx8v" path="res://assets/GUI/GUI_Rect.png" id="2_0hfmq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lqom5"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_54lro")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -139.0
offset_top = -167.0
offset_right = 143.0
offset_bottom = 165.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_lqom5")

[node name="MenuFrame" type="TextureRect" parent="Panel"]
custom_minimum_size = Vector2(300, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -175.0
offset_right = 150.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("2_0hfmq")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -106.0
offset_right = 112.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_y00tv")
text = "Пауза"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer" groups=["pause_menu_buttons"]]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../SaveButton")
focus_next = NodePath("../SaveButton")
focus_previous = NodePath("../ExitButton")
theme = ExtResource("1_y00tv")
text = "Продолжить"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer" groups=["pause_menu_buttons"]]
visible = false
layout_mode = 2
theme = ExtResource("1_y00tv")
text = "Сохранить"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer" groups=["pause_menu_buttons"]]
visible = false
layout_mode = 2
theme = ExtResource("1_y00tv")
text = "Загрузить"

[node name="ExitButton" type="Button" parent="Panel/VBoxContainer" groups=["pause_menu_buttons"]]
layout_mode = 2
focus_neighbor_top = NodePath("../LoadButton")
focus_neighbor_bottom = NodePath("../ResumeButton")
focus_next = NodePath("../ResumeButton")
focus_previous = NodePath("../LoadButton")
theme = ExtResource("1_y00tv")
text = "Выйти в меню"

[connection signal="mouse_entered" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/SaveButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBoxContainer/SaveButton" to="." method="_on_Button_mouse_exited"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/LoadButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBoxContainer/LoadButton" to="." method="_on_Button_mouse_exited"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/ExitButton" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Panel/VBoxContainer/ExitButton" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Panel/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
